# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = ["derive"]

[package]
name = "gotham_formdata"
version = "0.0.1"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "Form data parsing for the gotham web framework"
keywords = ["gotham", "html", "form", "urlencoded", "multipart"]
categories = ["web-programming", "web-programming::http-server"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/msrd0/gotham_formdata"
include = ["src/**", "Cargo.toml", "LICENSE", "README.md"]

[features]
default = ["regex"]
regex = ["gotham_formdata_derive/regex", "regex_crate"]

[dependencies]
either = "1.0"
form_urlencoded = "1.0"
futures-util = "0.3.7"
gotham = { version = "0.5", default-features = false }
gotham_formdata_derive = { version = "0.0.1", path = "derive/" }
log = "0.4"
mime = "0.3"
multer = "1.2"
thiserror = "1.0"

# Optional Dependencies
regex_crate = { package = "regex", version = "1.4", optional = true }

[dev-dependencies]
futures-executor = "0.3.7"
pretty_env_logger = "0.4"
trybuild = "1.0"
