# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = ["derive"]

[package]
name = "gotham_formdata"
version = "0.0.4"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "Form data parsing for the gotham web framework"
keywords = ["gotham", "html", "form", "urlencoded", "multipart"]
categories = ["web-programming", "web-programming::http-server"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/msrd0/gotham_formdata"
include = ["src/**", "Cargo.toml", "LICENSE", "README.md"]

[features]
default = ["regex-validation"]

# This feature allows the usage of `#[validate(regex = "[0-9a-fA-F]+")]`
regex-validation = ["gotham_formdata_derive/regex", "once_cell", "regex"]

[dependencies]
bytes = "1.0"
either = "1.6"
form_urlencoded = "1.0"
futures-util = "0.3.15"
gotham = { version = "0.6", default-features = false }
gotham_formdata_derive = { version = "0.0.3", path = "derive/" }
log = "0.4"
mime = "0.3.16"
multer = "2.0"
thiserror = "1.0"

# Optional Dependencies (not features)
once_cell = { version = "1.7", optional = true }
regex = { version = "1.5", optional = true }

[dev-dependencies]
futures-executor = "0.3.15"
percent-encoding = "2.1"
pretty_env_logger = "0.4"
trybuild = "1.0"
