# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = ["derive"]

[package]
name = "gotham_formdata"
version = "0.0.6"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"
rust-version = "1.59.0"
description = "Form data parsing for the gotham web framework"
keywords = ["gotham", "html", "form", "urlencoded", "multipart"]
categories = ["web-programming", "web-programming::http-server"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/msrd0/gotham_formdata"
include = ["src/**", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
bytes = "1.0"
form_urlencoded = "1.0"
futures-util = "0.3.15"
gotham = { version = "0.7", default-features = false }
gotham_formdata_derive = { version = "0.0.5", path = "derive/" }
log = "0.4"
mime = "0.3.16"
multer = "2.0"
paste = "1.0"
serde = "1.0"
thiserror = "1.0"
validator = "0.16"

[dev-dependencies]
futures-executor = "0.3.15"
gotham = { version = "0.7", features = ["testing"], default-features = false }
percent-encoding = "2.1"
pretty_env_logger = "0.4"
trybuild = "=1.0.71"
validator = { version = "0.16", features = ["derive"] }
