# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_formdata_derive"
version = "0.0.2"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "Derive macros for gotham_formdata"
license = "Apache-2.0"
repository = "https://github.com/msrd0/gotham_formdata"
include = ["src/**", "Cargo.toml", "LICENSE"]

[lib]
proc-macro = true

# This crate is only meant to be imported (and re-exported) by gotham_formdata, so default features make no sense.
[features]
regex = []

[dependencies]
heck = "0.3.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
