# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_formdata_derive"
version = "0.0.4"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "Implementation detail of gotham_formdata"
license = "Apache-2.0"
repository = "https://github.com/msrd0/gotham_formdata"
include = ["src/**", "Cargo.toml", "LICENSE"]

[lib]
proc-macro = true

[features]
# This crate is only meant to be imported (and re-exported) by gotham_formdata, so default features make no sense.
regex = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive", "parsing", "printing", "proc-macro"], default-features = false }
