# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_formdata_derive"
version = "0.0.7"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "Implementation detail of gotham_formdata"
license = "Apache-2.0"
repository = "https://github.com/msrd0/gotham_formdata"
include = ["src/**", "Cargo.toml", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"], default-features = false }
syn-path = "2.0"

[dev-dependencies]
syn = { version = "2.0", features = ["extra-traits"], default-features = false }
